k8s/apps/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: prod
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
